# linkedin-analyzer

./: .dockerignore  .editorconfig  .env.example  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  eslint.config.mjs  jsconfig.json  package-lock.json  package.json  playwright.config.js  pyproject.toml  vercel.json
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  npm-audit-allowlist.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  commit-python-locks.yml  dependency-audit.yml  dependency-review.yml  publish.yml  refresh-action-shas.yml  refresh-python-locks.yml  web-smoke.yml
api/: csp-report.mjs
config/: eslint.config.mjs  jsconfig.json  knip.json  playwright.config.js  prettierignore  prettierrc.json
constraints/container-build/: requirements.txt
docs/: cli.md  development.md  operations.md  structure.md  style-guide.md  web-app.md
docs/adr/: 001-npm-overrides-for-transitive-dependency-gaps.md  002-no-framework-hash-routed-spa.md  003-indexeddb-storage-with-session-ttl.md  004-opt-in-telemetry-with-pii-scrubbing.md  005-dual-runtime-cleaner-with-parity-fixtures.md  006-hatch-vcs-versioning-and-gated-publishing.md
scripts/: check-overrides.js  check-overrides.mjs  gen-parity-corpus.mjs  web-smoke.mjs
scripts/checks/: audit_memory_python.py  cleaner-diff.mjs  heap-audit.mjs  li_explore.py  perf-bench.mjs  pipeline-bench.mjs  validate_browser_xlsx.py  xrt-diff.py
scripts/ci/: refresh_action_shas.py  run_parallel_checks.py  workflow_helpers.py
scripts/gh/: __init__.py  ci_status.py  cli.py  gh_runner.py  pr_review.py
scripts/lint/: lint-workflows.mjs
scripts/setup/: playwright_local_runtime.py
src/linkedin_analyzer/: __init__.py  cli.py
tests/: __init__.py  test_ci_status.py  test_cleaner.py  test_cli.py  test_connections_cleaner.py  test_excel.py  test_gh_runner.py  test_makefile.py  test_messages_cleaner.py  test_package.py  test_paths.py  test_playwright_local_runtime.py  test_pr_review.py  test_refresh_action_shas.py  test_run_parallel_checks.py  test_text.py  test_types.py  test_web_parity.py  test_workflow_helpers.py  test_xrt_diff.py
tests/fixtures/: byte-decoding-parity.json  comments-corpus.csv  comments-parity.csv  connections-corpus.csv  connections-parity.csv  malformed-csv-outcomes.json  messages-corpus.csv  messages-parity.csv  parity-corpus-expected.json  shares-corpus.csv  shares-parity.csv
web/: analytics.html  clean.html  index.html  insights.html  messages.html  robots.txt  sw.js  vite.config.js  vitest.config.js
web/assets/: manifest.webmanifest
web/css/: screens.css  sketch.css  style.css  tutorial.css  variables.css
web/e2e/: app.e2e.spec.js  browser-xlsx.e2e.spec.js  screenshots.e2e.spec.js
web/js/: analytics-ui.js  analytics-worker.js  analytics.js  app.js  charts.js  clean.js  cleaner.js  connections-ui.js  connections-worker.js  data-cache.js  decorations.js  excel.js  insights-ui.js  loading-overlay.js  messages-analytics.js  messages-insights.js  messages-worker.js  router.js  runtime.js  screen-manager.js  session.js  storage.js  theme.js  tutorial-steps.js  tutorial.js  upload.js
web/src/: analytics-constants.js  analytics-dates.js  analytics-insights.js  analytics-stats.js  analytics-text.js  (+46 more)
(+91 files in other folders)
